Day-14/manifests/backend-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: backend-policy
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: prod-backend
  policyTypes:
  - Ingress
  - Egress
  ingress:
  # Allow ingress from the Frontend Pods only on Port 8080
  - from:
    - podSelector:
        matchLabels:
          app: prod-frontend
    ports:
    - protocol: TCP
      port: 8080
  egress:
  # Allow egress traffic to CoreDNS (kube-system namespace)
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: kube-system
    ports:
    - protocol: UDP
      port: 53
    - protocol: TCP
      port: 53
  # Allow egress traffic to the Postgres Database on Port 5432
  - to:
    - podSelector:
        matchLabels:
          app: prod-postgres
    ports:
    - protocol: TCP
      port: 5432
